# multi-tenant-externalid-template

./: .dockerignore  .gitignore  LICENSE  README.md  azure.yaml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  mcp.json
.github/workflows/: copilot-setup-steps.yml
contracts/: README.md  backend-api.openapi.yaml  backend-mcp.openapi.yaml  custom-claims-provider.openapi.yaml  frontend-api.openapi.yaml
docs/: agent-tenant-isolation-patterns-slides.md  architecture-design.md  demo-script.md  external-id-app-registrations.sample.json  foundry-hosted-session-management.md  internal-entra-service-auth.sample.json  lessons-learned.md  local-development.md  product-backlog.md  production-readiness-gaps.md  prometeia-multi-tenant-agent-identity-slides.md  runbook.md  threat-model.md  workflow.md  workforce-federation-authorized-users.sample.json  workforce-federation-setup.md
docs/adr/: 0000-template.md  (+8 more)
infra/: bootstrap-jumpbox-secret.bicep  external-id.bicep  jumpbox-deployment.bicep  main.bicep  main.parameters.json  tenant-onboarding.bicep
scripts/: bootstrap-jumpbox-secret.py  create-external-id-app-registrations.py  create-external-id-demo-users.py  create-external-id-demo-users.sh  create-internal-backend-service-auth.py  create-workforce-federated-users.py  create-workforce-federated-users.sh  create-workforce-federation-app.py  create-workforce-federation-app.sh  evaluate-portfolio-agent.py  get-external-id-access-token.py  new-tenant.py  new-tenant.sh  register-claims-extension.py  register-claims-extension.sh  seed-data.fixtures.json  seed-data.py  seed-data.sh  seed-federated-entitlements.py  seed-federated-entitlements.sh  set-azd-auth-env.py  validate-deployment.py  validate-deployment.sh
src/portfolio-agent-python/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.manifest.yaml  agent.yaml  eval.yaml  pyproject.toml
src/portfolio-agent-python/.agent_configs/baseline/: instructions.md
src/portfolio-agent-python/.foundry/: README.md
src/portfolio-agent-python/evaluation-suites/: portfolio-smoke-trace.yaml  portfolio-tenant-safety-trace.yaml  portfolio-tenant-safety.yaml  portfolio-tool-diagnostics.yaml
src/portfolio-agent-python/portfolio_agent/: __init__.py  agent_factory.py  constants.py  context.py  handler.py  main.py  mcp_client.py  memory.py  models.py  telemetry.py  tools.py
src/portfolio-agent-python/tests/: conftest.py  test_agent_factory.py  test_context.py  test_handler.py  test_main.py  test_mcp_client.py  test_memory.py  test_models.py  test_tools.py
(+142 files in other folders)
